CHANGES
=======
2019/05/30
- Added fix for missing "CURRENT ISOLATION" register
- Fixed Autocommit not working for pyodbc
- Fixed NameError: name 'asbool' is not defined python 

2016/08/29
- Fixed multiple defects mentioned below
- Add documentation on alchemy url for conncetion over ssl 
- DB2 on AS400: An unexpected token "ISOLATION" was found on ibm_db_sa/ibm_db.py
- Getting AttributeError for AS400 
- name 'unicode' is not defined
- AttributeError when using pyodbc
- add capability to the driver to generate query with literals, compile_kwargs={"literal_binds": True} 

2016/08/30
-Added Support for Python 3.x

2014/10/20 (IBM_DB_SA adaptor 0.3.2)
- Added SSL support
- Added get_incoming_foreign_keys functionality with reflector 
- Added get_unique_constraints reflection feature 
- Added exist() unary operator support within select clause 
- Fixed incompatible issue of sql.true() for SQLAlchemy v0.7.x & 0.8.x 
- Fixed add_constraint incompatible issue with SQLAlchemy-0.9.x
- Fixed reflection function get_indexes to not return the unique constraint participating index 

2014/03/26 (IBM_DB_SA adapter 0.3.1)
- Handle Double Type in DDL Generator
- Translating 'update' and 'read' lock-mode with DB2 compatible SQL
- Added Stored procedure with outparam support in ibm_db_sa dialect
- Convert nullable unique constraint to unique index exclude nulls for DB2 10.5
- Fix to detect invalid connection
- Added support for CHAR_LENGTH function support
- Fix drop index implementation incompatibility with SQLAlchemy-0.8.x onwards
- Add/Fix support for zxjdbc for both IBM DB LUW and AS/400
- Add/Fix support for PyODBC for both IBM DB LUW and AS/400
- Fix reflection for get_lastrowid

2013/03/01 (IBM_DB_SA adapter 0.3.0)
- Add support for LIMIT/OFFSET
- Add support for savepoints
- Add support for double-precision floating-point number
- Fixed reflection for get_view_names and get_view_definition
 
2013/02/06
- Add support for SQLAlchemy 0.7/0.8
- Refactor code layout